--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,4 +4,5 @@ recursive-include django_mises/main/templates/ *
 recursive-include django_mises/prelaunch/templates/ *
 recursive-include django_mises/users/templates/ *
 recursive-include django_mises/blog/templates/ *
+recursive-include django_mises/locale/ *
 
